<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/grey_50"
        android:paddingStart="4dp"
        android:paddingLeft="4dp"
        android:text="@string/sort_by"
        android:textStyle="bold"
        android:textColor="@color/Black"
        android:textSize="14sp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/ascending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/grey_50"
        android:text="@string/alcohol_level_lower_to_higher"
        android:textAllCaps="false"
        android:textSize="15sp" />

    <Button
        android:id="@+id/descending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/grey_50"
        android:text="@string/alcohol_level_higher_to_lower"
        android:textAllCaps="false"
        android:textSize="15sp"
       />

</LinearLayout>
