<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:cardBackgroundColor="#FAFAFA"
        app:cardCornerRadius="6dp"
        tools:ignore="ExtraText,PrivateResource"
        tools:style="@style/CardView">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView
                android:id="@+id/svFlag"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/beer"
                android:contentDescription="@string/show_image" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingLeft="4dp"
                    android:text="@string/rod_bender_red"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingLeft="4dp"
                    android:text="@string/american_ipa"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/abv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="6dp"
                    android:paddingLeft="4dp"
                    android:text="@string/alcohol_level_1"
                    android:textColor="#D50000"
                    android:textSize="12sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:background="@drawable/add"
                android:paddingLeft="8dp"
                android:layout_marginStart="6dp"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>